# dotdq

./: .envrc  Cargo.toml  justfile
benchmarks/: Cargo.toml
benchmarks/benches/: benchmarks.rs
src/ai/: Cargo.toml
src/ai/src/: ai_agent_action.rs  lib.rs
src/ai/src/core/: compound_evaluator.rs  game_state_node.rs  mod.rs  state_predictor.rs  win_loss_evaluator.rs
src/ai/src/game/: agents.rs  definitions.rs  evaluators.rs  mod.rs
src/ai/src/monte_carlo/: monte_carlo_search.rs
src/ai/src/nim/: mod.rs  nim_agents.rs  nim_game.rs  nim_main.rs  run_nim_impl.rs
src/ai/src/testing/: run_matchup.rs  run_matchup_main.rs  run_tournament_main.rs
src/ai/src/tree_search/: alpha_beta.rs
src/data/: Cargo.toml
src/data/src/: auction_data.rs  auction_phase_data.rs  bid_data.rs  contract_phase_data.rs  delegate_data.rs  game_action.rs  lib.rs  play_data.rs  play_phase_data.rs  primitives.rs  program_data.rs  program_name.rs  programs.rs  round_data.rs  widget_id.rs
src/data/src/design/: colors.rs  mod.rs  symbols.rs
src/data/src/primitive/: mod.rs  numerics.rs  primitives.rs
src/display/: Cargo.toml
src/display/src/: card_view.rs  horizontal_hand_view.rs  layout.rs  lib.rs  play_phase_view.rs  render_context.rs  trick_view.rs  vertical_hand_view.rs  widget_id.rs
src/display/src/core/: button.rs  mod.rs  render_context.rs  widget_adapter.rs
src/display/src/play_phase/: horizontal_hand_view.rs  mod.rs  play_phase_view.rs  trick_view.rs  vertical_hand_view.rs
src/display/src/rendering/: colors.rs  mod.rs  widget_adapter.rs
src/display/src/rounds/: card_view.rs  contract_bid_view.rs  contract_phase_view.rs  contract_view.rs  horizontal_hand_view.rs  mod.rs  play_area_delegate.rs  play_area_state.rs  play_area_view.rs  play_phase_view.rs  program_list_view.rs  trick_view.rs  vertical_hand_view.rs
src/main/: Cargo.toml
src/main/src/: app.rs  cli.rs  main.rs  tui.rs  utils.rs
src/primitives/src/: primitives.rs
src/programs/: Cargo.toml
src/programs/src/: lib.rs  play_phase_programs.rs
src/rules/: Cargo.toml
src/rules/src/: auction.rs  lib.rs  new_game.rs  play_phase_actions.rs  play_phase_queries.rs
src/rules/src/contract_phase/: contract_phase_actions.rs  contract_phase_queries.rs  mod.rs
src/rules/src/play_phase/: mod.rs  play_phase_actions.rs  play_phase_queries.rs
src/rules/src/program/: activation.rs  mod.rs  programs.rs
(+6 files in other folders)
