[package]
name = "ai"
version = "0.0.0"
edition = "2021"

[lib]
name = "ai"
test = false
doctest = false

[[bin]]
name = "nim"
path = "src/nim/nim_main.rs"

[dependencies]
data = { path = "../data", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }

clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
petgraph = "0.6.4"
rand = "0.8.5"