[package]
name = "ai"
version = "0.0.0"
edition = "2021"

[lib]
name = "ai"
test = false
doctest = false
bench = false

[[bin]]
name = "nim"
path = "src/nim/nim_main.rs"

[[bin]]
name = "run_matchup"
path = "src/testing/run_matchup_main.rs"

[[bin]]
name = "run_tournament"
path = "src/testing/run_tournament_main.rs"

[dependencies]
data = { path = "../data", version = "0.0.0" }
programs = { path = "../programs", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }

clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
crossbeam = "0.8.4"
enum-iterator = "2.0.0"
enumset = "1.1.3"
itertools = "0.12.1"
petgraph = "0.6.4"
rand = "0.8.5"
rayon = "1.10.0"
tracing = "0.1.37"