[package]
name = "display"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
data = { path = "../data", version = "0.0.0" }

crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
ratatui = { version = "0.26.0", features = ["serde", "macros"] }
tracing = "0.1.37"